// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Configuration > should match snapshot for the spec-minimal document 1`] = `
{
  "authorizationEndpoint": "https://test.lindorm.io/oauth/authorize",
  "idTokenSigningAlgValuesSupported": [
    "RS256",
  ],
  "issuer": "https://test.lindorm.io",
  "jwksUri": "https://test.lindorm.io/.well-known/jwks.json",
  "responseTypesSupported": [
    "code",
  ],
  "subjectTypesSupported": [
    "public",
  ],
  "tokenEndpoint": "https://test.lindorm.io/oauth/token",
}
`;

exports[`Configuration > should satisfy the amphora issuer read 1`] = `
[
  "https://test.lindorm.io",
  "https://test.lindorm.io/.well-known/jwks.json",
]
`;

exports[`Configuration > should satisfy the pylon relying-party read 1`] = `
{
  "optional": [
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "required": [
    "https://test.lindorm.io/oauth/authorize",
    "https://test.lindorm.io/oauth/token",
  ],
}
`;

exports[`Configuration > should serve the RFC-correct endpoint names 1`] = `
{
  "authorizationEndpoint": "https://test.lindorm.io/oauth/authorize",
  "endSessionEndpoint": "https://test.lindorm.io/oauth/end-session",
  "idTokenSigningAlgValuesSupported": [
    "RS256",
  ],
  "introspectionEndpoint": "https://test.lindorm.io/oauth/introspection",
  "issuer": "https://test.lindorm.io",
  "jwksUri": "https://test.lindorm.io/.well-known/jwks.json",
  "responseTypesSupported": [
    "code",
  ],
  "revocationEndpoint": "https://test.lindorm.io/oauth/revocation",
  "subjectTypesSupported": [
    "public",
  ],
  "tokenEndpoint": "https://test.lindorm.io/oauth/token",
}
`;

exports[`Configuration > should serve the draft authorization challenge endpoint 1`] = `
{
  "authorizationChallengeEndpoint": "https://test.lindorm.io/oauth/authorize-challenge",
  "authorizationEndpoint": "https://test.lindorm.io/oauth/authorize",
  "idTokenSigningAlgValuesSupported": [
    "RS256",
  ],
  "issuer": "https://test.lindorm.io",
  "jwksUri": "https://test.lindorm.io/.well-known/jwks.json",
  "responseTypesSupported": [
    "code",
  ],
  "subjectTypesSupported": [
    "public",
  ],
  "tokenEndpoint": "https://test.lindorm.io/oauth/token",
}
`;

exports[`Configuration > should serve the lindorm extension endpoints 1`] = `
{
  "authorizationEndpoint": "https://test.lindorm.io/oauth/authorize",
  "deviceAuthorizationEndpoint": "https://test.lindorm.io/oauth/device/code",
  "gdprRightOfAccessEndpoint": "https://test.lindorm.io/gdpr/disclosure",
  "gdprRightToDataPortabilityEndpoint": "https://test.lindorm.io/gdpr/portability",
  "gdprRightToErasureEndpoint": "https://test.lindorm.io/gdpr/erasure",
  "idTokenSigningAlgValuesSupported": [
    "RS256",
  ],
  "issuer": "https://test.lindorm.io",
  "jwksUri": "https://test.lindorm.io/.well-known/jwks.json",
  "responseTypesSupported": [
    "code",
  ],
  "subjectTypesSupported": [
    "public",
  ],
  "tokenEndpoint": "https://test.lindorm.io/oauth/token",
}
`;
